<resources>
    <string name="app_name">InventoryApp</string>
    <string name="overview">Overview</string>
    <string name="product_name_hint">Product name</string>
    <string name="product_price_hint">Product price</string>
    <string name="eur">EUR</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone_number">Supplier phone number</string>
    <string name="insert_book_details">Insert Book details</string>
    <string name="delete_all_books">Delete all books</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="toast_msg_error">Error while saving book</string>
    <string name="toast_msg_success">Book saved</string>
    <string name="table_contains_info">The books table contains" "</string>
    <string name="editor_activity_title_new_book">Add a new Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_book_update_failed">Book update failed</string>
    <string name="editor_book_update_successful">Book successfully updated</string>
    <string name="editor_delete_book_failed">Book weren\'t deleted</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_discard_warning">Discard your changes and quit editing?</string>
    <string name="editor_discard">Discard</string>
    <string name="editor_keep_editing">Keep editing</string>
    <string name="editor_delete_dialog">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="toast_quantity_cannot_be_negative">Quantity value cannot be negative</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="btn_sale_title">sale</string>
    <string name="product_name_title">Product name:" "</string>
    <string name="product_price_title">Product price:" "</string>
    <string name="available_title">Available:" "</string>
    <string name="currently_no_books">Currently there are no books in the store</string>
    <string name="do_not_hesitate">Please do not hesitate and add one or two</string>
    <string name="item">" " item</string>
    <string name="items">" " items</string>
    <string name="no_product_in_stock">Currently there is no product in stock</string>
    <string name="product_update_failed">Product update failed</string>
    <string name="enter_product_name">Please enter the product name</string>
    <string name="enter_product_price">Please enter the price</string>
    <string name="enter_supplier_name">Please enter the Supplier Name</string>
    <string name="enter_phone_number">Please enter the supplier phone number</string>
    <string name="rows_deleted">rows deleted from books database</string>
</resources>
